Fixes spacing and broken links

--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 a { color: black; text-decoration: none; font-family: 'Raleway', sans-serif; font-weight: bold;}
+a:hover {color: gray;}
 
 body{
     background-color: #fdf9f3;
@@ -54,6 +55,12 @@ li a:hover {color: gray;}
 }
 #rightcolumn {
      width: 50%;
+ }
+ #qual{
+ 	margin-top: -10px;
+ }
+ #qual1, #qual2, #qual3 {
+ 	margin-bottom: -15px;
  }
 #wrapper {
      width: 100%;
